# sales-mind-ai

./: .gitignore  CHANGELOG.md  DEPLOY.md  DEPLOY_CLOUD.md  DEPLOY_FREE.md  Dockerfile  Dockerfile.railway  QUICKSTART.md  README.md  ZERO_COST.md  deploy-free.ps1  docker-compose.free.yml  docker-compose.yml  jarvis-config.json  railway.toml  start.sh
.github/workflows/: ci-cd.yml
backend/: .env.example  .env.railway  Dockerfile  Dockerfile.railway  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: analytics.py  auth.py  leads.py  playbooks.py  router.py  webhooks.py
backend/app/core/: celery_app.py  config.py  cost_monitor.py  database.py  middleware.py  security.py
backend/app/models/: models.py
backend/app/services/: ai_engine.py  email_service.py  free_ai_engine.py
backend/tests/: conftest.py  test_auth.py  test_leads.py
docs/: PRD.md  ZERO_COST_SUMMARY.md
frontend/: Dockerfile  package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/leads/: page.tsx
frontend/src/app/leads/new/: page.tsx
frontend/src/app/playbooks/: page.tsx
frontend/src/app/playbooks/new/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/ui/: progress.tsx  select.tsx
frontend/src/contexts/: auth-context.tsx
nginx/: default.conf
scripts/: deploy-railway.sh  deploy-vercel.sh  zero-cost-setup.sh
